Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15181

Qt Creator freezes due to QWaitCondition:wait() in ProFileCache::discardFiles

XMLWordPrintable

      Happened the very first time with:

      • Qt Creator from yesterday's 3.6 branch (bc67114).
      • Build with Qt 5.4.0.

      Stacktrace (full stacktrace attached):

      1	__lll_lock_wait			0x7f53dcc5df2c	
      2	pthread_cond_wait * *GLIBC_2.3.2			0x7f53dcc5b529	
      3	QWaitCondition::wait(QMutex *, unsigned long)			0x7f53dcf0fb03	
      4	ProFileCache::discardFiles	qmakeparser.cpp	94	0x7f53ca2d491a	
      5	QtSupport::ProFileCacheManager::discardFiles	profilereader.cpp	167	0x7f53ca36b76c	
      6	QmakeProjectManager::QmakeProject::destroyProFileReader	qmakeproject.cpp	993	0x7f53bcb429c1	
      7	QmakeProjectManager::QmakeProFileNode::cleanupProFileReaders	qmakenodes.cpp	2300	0x7f53bcb65e30	
      8	QmakeProjectManager::QmakeProFileNode::applyEvaluate	qmakenodes.cpp	2294	0x7f53bcb65b64	
      9	QmakeProjectManager::QmakeProFileNode::applyAsyncEvaluate	qmakenodes.cpp	2078	0x7f53bcb6481e	
      10	QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject *, Utils::FileName const&)::{lambda()#1}::operator()() const	qmakenodes.cpp	1655	0x7f53bcb5fc67	
      11	QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject *, const Utils::FileName&)::__lambda0>::call(QmakeProjectManager::QmakeProFileNode::__lambda0, void * *)	qobjectdefs_impl.h	494	0x7f53bcb68b5d	
      12	QtPrivate::Functor<QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject *, const Utils::FileName&)::__lambda0, 0>::call<QtPrivate::List<>, void>(QmakeProjectManager::QmakeProFileNode::__lambda0 &, void *, void * *)	qobjectdefs_impl.h	551	0x7f53bcb68b3f	
      13	QtPrivate::QFunctorSlotObject<QmakeProjectManager::QmakeProFileNode::QmakeProFileNode(QmakeProjectManager::QmakeProject *, const Utils::FileName&)::__lambda0, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)	qobject_impl.h	192	0x7f53bcb68b07	
      14	QMetaObject::activate(QObject *, int, int, void * *)			0x7f53dd176035	
      15	QFutureWatcherBase::event(QEvent *)			0x7f53dcf06c47	
      16	QApplicationPrivate::notify_helper(QObject *, QEvent *)			0x7f53de1e98f4	
      17	QApplication::notify(QObject *, QEvent *)			0x7f53de1ed506	
      18	QCoreApplication::notifyInternal(QObject *, QEvent *)			0x7f53dd143c84	
      19	QCoreApplicationPrivate::sendPostedEvents(QObject *, int, QThreadData *)			0x7f53dd146868	
      20	??			0x7f53dd19e123	
      21	g_main_context_dispatch			0x7f53db110e04	
      22	??			0x7f53db111048	
      23	g_main_context_iteration			0x7f53db1110ec	
      24	QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)			0x7f53dd19e554	
      25	QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)			0x7f53dd141eab	
      26	QCoreApplication::exec()			0x7f53dd146dc5	
      27	main	main.cpp	526	0x40df94	
      

        For Gerrit Dashboard: QTCREATORBUG-15181
        # Subject Branch Project Status CR V

            dt Daniel Teske
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes